--- a/C/grammar-notes/storage_class.html
+++ b/C/grammar-notes/storage_class.html
@@ -5,4 +5,4 @@
 </pre><p><br></p><h2>register</h2><ul><li>The&nbsp;<strong>register</strong>&nbsp;storage class is used to define <span style="color: rgb(230, 0, 0);">local variables</span> that <span style="color: rgb(230, 0, 0);">should</span> be stored in a <span style="color: rgb(230, 0, 0);">register</span> instead of RAM.&nbsp;</li><li>it <strong>MIGHT</strong> be stored in a register depending on hardware and implementation restrictions.</li><li>If the variable is storaged in a register, which has a maximum size equal to the register size (usually one word)&nbsp;.</li><li>The register should only be used for variables that require quick access such as counters.</li></ul><pre class="ql-syntax" spellcheck="false">{
    register int  counter;
 }
-</pre><p><br></p>
+</pre><p><br></p><p><br></p>
